# zephyr-meshtastic

./: .gitignore  CMakeLists.txt  Kconfig
app/games/display/: prj.conf
app/games/display/src/: main.c
app/games/gba/: CMakeLists.txt  prj.conf
app/games/gba/src/: main.cpp  peanut_gb.h  rom.cpp  rom.h
app/meshtastic/: CMakeLists.txt  prj.conf
app/meshtastic/boards/: native_sim.conf  native_sim.overlay  tdeck.conf  tdeck.overlay
app/meshtastic/src/: main.c
app/tdeck/audioplayer/: CMakeLists.txt  prj.conf
app/tdeck/audioplayer/src/: audio_thread.c  main.c
app/tdeck/audiosd/: prj.conf
app/tdeck/audiosd/src/: main.c
app/tdeck/i2s_output/: prj.conf  romreport
app/tdeck/i2s_output/src/: buffer.inc  cout.inc  main.c  minimp3.h  mp3.c  out.inc
app/tdeck/radiotests/: prj.conf
app/tdeck/radiotests/src/: main.c
app/tdeck/sd/: prj.conf
app/tdeck/sd/src/: main.c
app/tdeck/spinningfish/: image2bytes.py  prj.conf
app/tdeck/spinningfish/src/: fish.c  main.c
app/tdeck/video/: buildlog  minicom.cap  prj.conf
app/tdeck/video/src/: main.c
boards/tdeck/: tdeck-pinctrl.dtsi  tdeck_esp32s3_procpu.dts  tdeck_esp32s3_procpu_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/dai/max98357/: Kconfig  max98357.c  max98357.h
drivers/i2s/max98357/: CMakeLists.txt  Kconfig  max98357.c
drivers/input/lilygo_tdeck_keyboard/: tdeck_keyboard.c
drivers/lora/: CMakeLists.txt  Kconfig
drivers/lora/generic_lora/: CMakeLists.txt  Kconfig  generic_lora.c
drivers/misc/aw9364/: aw9364.c
dts/bindings/dai/: adi,max98357.yaml
dts/bindings/i2s/: adi,max98357.yaml
dts/bindings/lora/: generic,lora.yaml
include/: meshtastic.h
include/config/: config.h
lib/: CMakeLists.txt  Kconfig  level0.c  level1.c  level2.c  level3.c  packet_db.c  radio.c
lib/config/: CMakeLists.txt  config.c  config_util.c  config_util.h
lib/shell/: config_shell.c  mock_shell.c
zephyr/: module.yml
